[Home] Layout bugfix for the configuration form [Home] Limited the height of the day calendar with overflow [Home] Limited the width of the home blocks with overflow to prevent overlap [Weblcms] Fixed subscribe / unsubscribe fatal error [User] Removed save and reset buttons when no field is editable [Weblcms] Fixed fatal error in sort courses [Portfolio] Fixed the user picture beeing too big [Repository] Fixed the CPO export in the workspaces when a content object with attachments that are not published in the workspace are exported [Vimeo] Removed a bunch of functionality that only works when a user is logged-in and now doesn't work due to the missing feature of a logged in user [Weblcms] Fixed new submissions block [Course Groups]??Fixed subscriptions in course groups [Reporting]??Fixed showing reports as diagrams fatal error [User Reporting] Fixed fatal error [Personal Calendar] Removed settings year due to the view not beeing available anymore

--- a/src/Chamilo/Core/Repository/ContentObject/Portfolio/Resources/Css/Aqua/Stylesheet.css
+++ b/src/Chamilo/Core/Repository/ContentObject/Portfolio/Resources/Css/Aqua/Stylesheet.css
@@ -92,9 +92,13 @@ ul.tree-menu li div a.portfolio, ul.tree-menu li div a.type_portfolio,
 	padding-top: 5px;
 }
 
-.panel.panel-default.panel-portfolio .portfolio-photo {
+.portfolio-photo-container {
+	margin-bottom: 20px;
+}
+
+.portfolio-photo-container .portfolio-photo {
 	width: 100%;
-	max-width: 100%;
+	max-width: 100px;
 	padding: 0px;
 }
 
